# ascertain-code-challenge

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/data/: encounters.json  medication_requests.json  patients.json
backend/utils/: fhir_utils.py
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  index.ts
frontend/src/components/layout/: Layout.tsx
frontend/src/components/patients/: PatientDetails.tsx  PatientList.tsx  PatientRow.tsx  index.ts
frontend/src/components/patients/__tests__/: PatientDetails.test.tsx  PatientList.test.tsx
frontend/src/components/patients/ui/: EmptyState.tsx  ErrorState.tsx  LoadingState.tsx  NoResultsState.tsx  PatientTable.tsx
frontend/src/components/ui/: EmptyState.tsx  LoadingState.tsx  NoResultsState.tsx  PatientTable.tsx  ThemeToggle.tsx  index.ts
frontend/src/providers/: MantineProvider.tsx
frontend/src/queries/: api.ts  patient.ts  schema.d.ts
frontend/src/styles/: animations.css  utilities.css
frontend/src/test/: TestProviders.tsx  setup.ts  utils.tsx
frontend/src/views/: index.ts
frontend/src/views/patients/: PatientDetails.tsx  PatientList.tsx  index.ts
frontend/src/views/patients/__tests__/: PatientDetails.test.tsx  PatientList.test.tsx
