[tool.poetry]
name = "fhir-api"
version = "0.1.0"
description = "FHIR API for healthcare data"
authors = ["Ascertain"]
readme = "README.md"
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
litellm = ">=1.65.1,<2.0.0"
requests = "^2.31.0"
pydantic = "^2.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
